<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pixy</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="file_size_error">There was a problem with the file selected</string>
    <string name="message_file_size">File should be less than 10 MB.</string>

    <string-array name="camera_choices">
        <item>Take picture</item>
        <item>Take video</item>
        <item>Choose picture</item>
        <item>Choose video</item>
    </string-array>

    <string name="title_activity_recipients">Select Recipients</string>
    <string name="empty_recipients">Select a few recipients from your friends!</string>
    <string name="error_selecting_file">Error selecting file</string>
    <string name="title_activity_view_image">Pixy</string>


    <string name="content_desc_background">Background image</string>
    <string name="subtitle">Like Snapchat but simpler.</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_button_label">LOGIN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="send_label">Send</string>
    <string name="push_message">You have a new message from %s!</string>


</resources>
