<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context=".SignUpActivity" >

    <ImageView
        android:id="@+id/backgroundImage"
        android:src="@drawable/background"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">


    <EditText
        android:id="@+id/usernameField"
        style="@style/AuthEditText"
        android:hint="Username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        style="@style/AuthEditText"
        android:hint="@string/password_hint"/>

    <EditText
        android:id="@+id/emailField"
        style="@style/AuthEditText"
        android:inputType="textEmailAddress"
        android:hint="Email" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:src="@drawable/button_divider"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonDivider"/>

    <Button
        android:id="@+id/signupButton"
        android:text="@string/signup_button_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"

        android:textSize="13sp"
        android:textColor="@color/text_color"
        android:layout_toLeftOf="@id/buttonDivider"/>



    <Button
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:background="@drawable/button_custom"

        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:textColor="@color/text_color"
        android:layout_toRightOf="@id/buttonDivider"/>



</RelativeLayout>
